<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/add_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddTag"
        />

    <EditText
         android:id="@+id/ptag_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/AddTagMessage" >
    </EditText>

    <Button
        android:id="@+id/add_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm" 
        android:onClick="addPTag"
        />
</LinearLayout>
