<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/AlbumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AlbumNameLabel"
        />

    <EditText
         android:id="@+id/addinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/AddAlbumMessage" >
    </EditText>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm" 
        android:onClick="addAlbum"
       
        />

</LinearLayout>