<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/search_area"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/SearchBar" />

    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SearchEdit"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm"
        android:onClick="searchTags" />

</LinearLayout>